# b2a-toolkit

./: .gitignore  README.md  pyproject.toml  requirements.txt
examples/: expense_tool.py
src/toolkit/: __init__.py  cli.py  core.py  dashboard.py  decorators.py  logging.py  replay.py  server.py  types.py  webhooks.py
src/toolkit/static/: app.js  index.html  styles.css
tests/: test_webhooks.py  webhook_server.py
