[project]
name = "b2a-toolkit"
version = "0.1.2"
description = "A lightweight framework to expose any API as an agent-compatible tool"
authors = [
    {name = "Toolkit Team", email = "toolkit-founder@agenticflow.app"}
]
dependencies = [
    "pydantic>=2.0.0",
    "typing-extensions>=4.5.0",
    "click>=8.1.0",
    "requests>=2.31.0",
    "openapi-spec-validator>=0.7.0",
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "Apache-2.0"}

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/toolkit"]

[tool.hatch.build.targets.sdist]
include = [
    "src/toolkit",
    "README.md",
    "LICENSE",
]

[tool.hatch.metadata]
allow-direct-references = true

[project.scripts]
toolkit = "toolkit.cli:cli" 